<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LotteryNoticeActivity">

    <ImageButton
            android:id="@+id/ibtn_lottery_notice_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            android:src="@drawable/bt_close"
            android:background="@android:color/transparent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/todo"/>

    <TextView
            android:id="@+id/tvWait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#fda47a"
            android:lineSpacingExtra="9sp"
            android:text="@string/moment"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tvNoticeTitleFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWait"
            android:layout_marginTop="8dp"
            android:textSize="13sp"
            android:textColor="#262626"
            android:lineSpacingExtra="9sp"
            android:gravity="center_horizontal"
            android:text="@string/title_first"/>

    <TextView
            android:id="@+id/tvNoticeTitleSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNoticeTitleFirst"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:textColor="#262626"
            android:lineSpacingExtra="9sp"
            android:gravity="center_horizontal"
            android:text="@string/title_second"/>

    <ImageView
            android:id="@+id/ivNotice"
            android:layout_width="230dp"
            android:layout_height="210dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNoticeTitleSecond"
            android:src="@drawable/notice"
            android:contentDescription="@string/todo"
    />

    <FrameLayout
            android:id="@+id/flNotice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivNotice"
            android:layout_marginTop="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="bottom|center"
                android:src="@color/colorYellow"
                android:contentDescription="@string/todo"
        />
        <TextView
                android:id="@+id/tvNoticeFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14sp"
                android:textColor="#262626"
                android:lineSpacingExtra="9sp"
                android:text="@string/notice_first"
        />
    </FrameLayout>

    <FrameLayout
            android:id="@+id/flNoticeSecond"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flNotice"
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="bottom|center"
                android:src="@color/colorYellow"
                android:contentDescription="@string/todo"
        />
        <TextView
                android:id="@+id/tvNoticeSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14sp"
                android:textColor="#262626"
                android:lineSpacingExtra="9sp"
                android:text="@string/notice_second"
        />
    </FrameLayout>

    <TextView
            android:id="@+id/tvNoticeThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flNoticeSecond"
            android:layout_marginTop="7dp"
            android:text="@string/notice_third"
            android:textSize="14sp"
            android:textColor="#262626"
            android:lineSpacingExtra="9sp"/>


    <Button
            android:id="@+id/btnGoLottery"
            android:layout_width="277dp"
            android:layout_height="35dp"
            android:layout_marginBottom="21dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNoticeThird"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/ripple_effect"
            android:text="@string/btn_lottery"
            android:textSize="17sp"
            android:textColor="#262626"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>