<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.LotteryConfirmActivity">

    <ImageButton
            android:id="@+id/ibtn_lottery_confirm_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            android:src="@drawable/bt_close"
            android:background="@android:color/transparent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="end"
            android:contentDescription="@string/todo"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">
        <TextView
                android:id="@+id/tv_lotteryconfirm_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/lottery_confirm"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/colorCoral"
                android:fontFamily="@font/notosans_bold"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp">
        <ImageView
                android:id="@+id/iv_lotteryconfirm_character"
                android:layout_width="290dp"
                android:layout_height="191dp"
                android:layout_centerInParent="true"
                android:src="@drawable/fail"
                android:contentDescription="@string/todo"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/rl_lotteryconfirm_suggested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
        <TextView
                android:id="@+id/tv_lotteryconfirm_congrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_centerHorizontal="true"
                android:text="@string/lottery_congrate"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textColor="@color/colorCoral"
                android:lineSpacingExtra="5dp"
                android:fontFamily="@font/notosans_light"/>

        <RelativeLayout
                android:id="@+id/rl_lotteryconfirm_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:layout_below="@+id/tv_lotteryconfirm_congrate">
            <TextView
                    android:layout_width="205dp"
                    android:layout_height="11dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="-10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorYellow"/>
            <TextView
                    android:id="@+id/tv_lotteryconfirm_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/lottery_pay"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textColor="@color/font_detail"
                    android:fontFamily="@font/notosans_light"
                    android:background="@android:color/transparent"/>
        </RelativeLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rl_lotteryconfirm_pay"
                android:text="@string/pay_cancel"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/font_detail"
                android:fontFamily="@font/notosans_light"
                android:background="@android:color/transparent"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/rl_lotteryconfirm_unsuggested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
        <TextView
                android:id="@+id/tv_lotteryconfirm_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:layout_centerHorizontal="true"
                android:text="@string/lottery_content"
                android:textAlignment="center"
                android:textSize="13sp"
                android:textColor="@color/font_detail"
                android:lineSpacingExtra="5dp"
                android:fontFamily="@font/notosans_light"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_lotteryconfirm_content">
            <TextView
                    android:layout_width="235dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="-10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorYellow"/>
            <TextView
                    android:id="@+id/tv_lotteryconfirm_highlight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/alarm_text"
                    android:textAlignment="center"
                    android:textSize="13sp"
                    android:textColor="@color/font_detail"
                    android:fontFamily="@font/notosans_light"
                    android:background="@android:color/transparent"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">
        <Button
                android:id="@+id/btn_lotteryconfirm_stagelike"
                android:layout_width="276dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:layout_above="@+id/btn_lotteryconfirm_stagelist"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ripple_gray"
                android:text="@string/setting_keep"
                android:textSize="15sp"
                android:textColor="@color/font_detail"
                android:textAlignment="center"
                android:fontFamily="@font/notosans_medium"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>
        <Button
                android:id="@+id/btn_lotteryconfirm_stagelist"
                android:layout_width="278dp"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ripple_effect"
                android:text="@string/seek_other_show"
                android:textSize="15sp"
                android:textColor="@color/font_detail"
                android:fontFamily="@font/notosans_medium"
                android:textAlignment="center"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>
</LinearLayout>