<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LotteryCompleteActivity">


    <ImageButton
            android:id="@+id/ibtn_lottery_complete_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            android:src="@drawable/bt_close"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tvLotteryComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="#fda47a"
            android:lineSpacingExtra="9sp"
            android:text="@string/textView_lottery_complete"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/ivComplete"
            android:layout_width="296dp"
            android:layout_height="235dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLotteryComplete"
            android:src="@drawable/complete"/>

    <FrameLayout
            android:id="@+id/flComment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivComplete"
            android:layout_marginTop="34dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="bottom|center"
                android:src="@color/colorYellow"
        />
        <TextView
                android:id="@+id/tvCommentFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14sp"
                android:textColor="#262626"
                android:lineSpacingExtra="9sp"
                android:text="@string/textview_comment_first"
        />
    </FrameLayout>

    <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tvCommentSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flComment"
            android:text="@string/textview_comment_second"
            android:textSize="14sp"
            android:textColor="#262626"
            android:lineSpacingExtra="9sp"/>

    <TextView
            android:id="@+id/tvCommentLuck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCommentSecond"
            android:text="@string/textview_comment_luck"
            android:textSize="15sp"
            android:textColor="#262626"
            android:lineSpacingExtra="9sp"/>

    <Button
            android:id="@+id/btnOkay"
            android:layout_width="277dp"
            android:layout_height="35dp"
            android:layout_marginBottom="21dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCommentLuck"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/ripple_effect"
            android:text="@string/confirm"
            android:textSize="17sp"
            android:textColor="#262626"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>